--- a/VideoRental/VideoRental/Views/Customers/Index.cshtml
+++ b/VideoRental/VideoRental/Views/Customers/Index.cshtml
@@ -18,15 +18,21 @@ else
                 <th>
                     Customer
                 </th>
+                <th>
+                    Membership Type
+                </th>
             </tr>
         </thead>
         @foreach (var customer in Model)
         {
-           <tr>
-               <td>
-                   @Html.ActionLink(customer.Name,"Details","Customers",new { id=customer.Id})
-               </td>
-           </tr>
+    <tr>
+        <td>
+            @Html.ActionLink(customer.Name, "Details", "Customers", new { id = customer.Id }, null)
+        </td>
+        <td>
+            @customer.MembershipType.Name
+        </td>
+      </tr>
         }
     </table>
 
