Customer Add and Update

--- a/VideoRental/VideoRental/Views/Customers/Details.cshtml
+++ b/VideoRental/VideoRental/Views/Customers/Details.cshtml
@@ -5,6 +5,12 @@
 }
 
 <h2>@Model.Name</h2>
+<ul>
+    @if (Model.BirthDate != null)
+    {
+        <li>Birthdate: @Model.BirthDate</li>
+    }
+</ul>
 
 
 
