--- a/VideoRental/VideoRental/Content/Site.css
+++ b/VideoRental/VideoRental/Content/Site.css
@@ -23,10 +23,15 @@ textarea {
     max-width: 280px;
 }
 
+/*Manual Additions*/
 .field-validation-error{
     color:red;
 }
 
 .input-validation-error{
     border:2px solid red;
+}
+
+.validation-summary-errors{
+    color:red;
 }
