Customer and Movie View Model Changes

--- a/VideoRental/VideoRental/Views/Movies/Index.cshtml
+++ b/VideoRental/VideoRental/Views/Movies/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<VideoRental.Models.Movie>
+﻿@model IEnumerable<VideoRental.ViewModels.MovieIndexViewModel>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
