--- a/VideoRental/VideoRental/Views/Customers/CustomerForm.cshtml
+++ b/VideoRental/VideoRental/Views/Customers/CustomerForm.cshtml
@@ -4,37 +4,36 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@if (Model.Customer.Id == 0)
-{
-    <h2>New Customer</h2>
-}
-else
-{
-    <h2>Edit Customer</h2>
-}
+<h2>@Model.Title</h2>
 
 @using (Html.BeginForm("Save", "Customers"))
 {
     @Html.ValidationSummary(true,"Please fix the following errors")
     <div class="form-group">
-        @Html.LabelFor(c => c.Customer.Name)
-        @Html.TextBoxFor(c => c.Customer.Name, new { @class = "form-control" })
-        @Html.ValidationMessageFor(c=>c.Customer.Name) 
+        @Html.LabelFor(c => c.Name)
+        @Html.TextBoxFor(c => c.Name, new { @class = "form-control" })
+        @Html.ValidationMessageFor(c=>c.Name) 
     </div>
     <div class="form-group">
-        @Html.LabelFor(c => c.Customer.MembershipTypeId)
-        @Html.DropDownListFor(c => c.Customer.MembershipTypeId, new SelectList(Model.MembershipTypes, "Id", "Name"), "Select Membership Type", new { @class = "form-control" })
-        @Html.ValidationMessageFor(c => c.Customer.MembershipTypeId)
+        @Html.LabelFor(c => c.MembershipTypeId)
+        @Html.DropDownListFor(c => c.MembershipTypeId, new SelectList(Model.MembershipTypes, "Id", "Name"), "Select Membership Type", new { @class = "form-control" })
+        @Html.ValidationMessageFor(c => c.MembershipTypeId)
     </div>
     <div class="form-group">
-        @Html.LabelFor(c => c.Customer.BirthDate)
-        @Html.TextBoxFor(c => c.Customer.BirthDate, "{0:d MMM yyyy}", new { @class = "form-control" })
-        @Html.ValidationMessageFor(c => c.Customer.BirthDate)
+        @Html.LabelFor(c => c.BirthDate)
+        @Html.TextBoxFor(c => c.BirthDate, "{0:d MMM yyyy}", new { @class = "form-control" })
+        @Html.ValidationMessageFor(c => c.BirthDate)
     </div>
     <div class="form-check">
-        @Html.CheckBoxFor(c => c.Customer.IsSubscribedToNewsletter, new { @class = "form-check-input" })
-        @Html.LabelFor(c => c.Customer.IsSubscribedToNewsletter, new { @class = "form-check-label" })
+        @Html.CheckBoxFor(c => c.IsSubscribedToNewsletter, new { @class = "form-check-input" })
+        @Html.LabelFor(c => c.IsSubscribedToNewsletter, new { @class = "form-check-label" })
     </div>
-        @Html.HiddenFor(c=>c.Customer.Id)
+        @Html.HiddenFor(c=>c.Id)
+        @Html.AntiForgeryToken()
     <button type="submit" class="btn btn-primary">Save</button>
+}
+
+@section scripts
+{
+    @Scripts.Render("~/bundles/jqueryval")
 }
