--- a/VideoRental/VideoRental/Views/Customers/Index.cshtml
+++ b/VideoRental/VideoRental/Views/Customers/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<VideoRental.Models.Customer>
+﻿@model IEnumerable<VideoRental.ViewModels.CustomerIndexViewModel>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
