--- a/VideoRental/VideoRental/Views/Customers/Index.cshtml
+++ b/VideoRental/VideoRental/Views/Customers/Index.cshtml
@@ -12,7 +12,7 @@
 </div>
 
 <div>
-    <table id="customersList" class="table table-bordered table-hover">
+    <table id="customersList" class="table table-bordered table-hover table-condensed">
         <thead>
             <tr>
                 <th>
