--- a/VideoRental/VideoRental/Views/Movies/Index.cshtml
+++ b/VideoRental/VideoRental/Views/Movies/Index.cshtml
@@ -16,7 +16,7 @@
 }
 else
 {
-<table id="moviesList" class="table table-bordered table-hover">
+<table id="moviesList" class="table table-bordered table-hover table-condensed">
     <thead>
         <tr>
             <th>
@@ -24,6 +24,9 @@ else
             </th>
             <th>
                 Genre
+            </th>
+            <th>
+                Delete
             </th>
         </tr>
     </thead>
@@ -36,6 +39,9 @@ else
                 </td>
                 <td>
                     @movie.Genre.Name
+                </td>
+                <td>
+                    @Html.ActionLink("Delete","Delete","Movies",new { id=movie.Id},null)
                 </td>
             </tr>
         }
