--- a/VideoRental/VideoRental/Content/Site.css
+++ b/VideoRental/VideoRental/Content/Site.css
@@ -24,11 +24,11 @@ textarea {
 }
 
 /*NOTE: Custom styles for validation*/
-.field-validation-error{
+.field-validation-error, label.error{
     color:red;
 }
 
-.input-validation-error{
+.input-validation-error, input.error{
     border:2px solid red;
 }
 
