--- a/VideoRental/VideoRental/Views/Home/Index.cshtml
+++ b/VideoRental/VideoRental/Views/Home/Index.cshtml
@@ -3,29 +3,30 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Movies at your fingertips</h1>
+    <p class="lead">An online video rental store just a click away from you...</p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <h4 class="card-header">Awsome Movies Catalog</h4>
+        <p class="card-body">Movies right out-of-the-box just for you.</p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h4 class="card-header">Exciting Membership Plans</h4>
+        <div class="card-body">
+            <p>Four membership plans to choose from:</p>
+            <div class="badge badge-success">Pay As You Go</div>
+            <div class="badge badge-info">Monthly</div>
+            <div class="badge badge-dark">Quarterly</div>
+            <div class="badge badge-warning">Annual</div>
+        </div>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <div>
+            <h4 class="card-header">Movie Management</h4>
+            <p class="card-body">No more confusion regarding status of movie availability.</p>
+        </div>
+        
     </div>
 </div>
