--- a/VideoRental/VideoRental/Views/Shared/_Layout.cshtml
+++ b/VideoRental/VideoRental/Views/Shared/_Layout.cshtml
@@ -18,6 +18,9 @@
             <div class="navbar-collapse collapse" id="navbarSupportedContent">
                 <ul class="nav navbar-nav mr-auto">
                     <li class="nav-item">
+                        @Html.ActionLink("Rentals","New","Rentals",null,new {@class="nav-link" })
+                    </li>
+                    <li class="nav-item">
                         @Html.ActionLink("Customers", "Index", "Customers", null, new { @class = "nav-link" })
                     </li>
                     <li class="nav-item">
